--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
 
-    <!--
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -18,18 +19,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Conch</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root">
-      <button name="TV_POWER_TOGGLE" onclick="handlePowerClick()">Power</button>
-      <button name="TV_VOLUME_UP" onclick="handleVolumeUpClick()">Volume Up</button>
-      <button name="TV_VOLUME_DOWN" onclick="handleVolumeDownClick()">Volume Down</button>
+  <title>The Conch</title>
+</head>
+
+<body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root">
+    <div>
+      <table id="output">
+
+      </table>
     </div>
-    <!--
+    <button name="TV_POWER_TOGGLE" onclick="handlePowerClick()">Power</button>
+    <button name="TV_VOLUME_UP" onclick="handleVolumeUpClick()">Volume Up</button>
+    <button name="TV_VOLUME_DOWN" onclick="handleVolumeDownClick()">Volume Down</button>
+  </div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,28 +46,34 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-    <script>
-      var socket = io('http://localhost:3010')
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+  <script>
+    var socket = io('http://localhost:3010')
+    let t0, t1
+
+    function handlePowerClick() {
+      socket.emit('IR_', 'A90')
+    }
+
+    function handleVolumeUpClick() {
+      socket.emit('IR_', '890')
+    }
+
+    function handleVolumeDownClick() {
+      socket.emit('IR_', 'B90')
+    }
+
+    socket.on('connect', function () {
+      console.log('Connected')
       
-      function handlePowerClick(e) {
-        socket.emit('IR_', 'A90')
-      }
-
-      function handleVolumeUpClick(e) {
-        socket.emit('IR_', '890')
-      }
-
-      function handleVolumeDownClick(e) {
-        socket.emit('IR_', 'B90')
-      }
-      socket.on('connect', function() {
-        console.log('Connected')
-        socket.on('IR_', function(data) {
-         console.log(data)
-        })
-        socket.emit('IR_', 'A90')
+      socket.emit('IR_', 'A90')
+      socket.on('IR_', function (data) {
+        const ul = document.getElementById('output')
+        const li = document.createElement('li')
+        li.textContent = data
+        ul.appendChild(li)
       })
-    </script>
-  </body>
+    })
+  </script>
+</body>
 </html>
